--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "md5": "^2.3.0",
     "mongoose": "^6.7.5",
     "mongoose-encryption": "^2.1.2",
+    "mongoose-find-or-create": "^1.3.1",
     "passport": "^0.6.0",
+    "passport-google-oauth2": "^0.2.0",
+    "passport-google-oidc": "^0.1.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.1.2"
   }
